assets/stylesheets/style.css
body {
  padding:0;
}

* {
  color: #AAA;
}

a:hover {
  text-decoration: none;
}

.actions div {
  cursor:pointer;
}

.actions .info {
  display:none;
  font-size:12px;
  text-transform: uppercase;
  color: #CCC;
  letter-spacing: 2px;
  position:absolute;
}

.start, .stop, .mute, .unMute {
  display:none;
}

.drills {
  margin-top:2em;
  position:relative;
  z-index:2;
}

ol{
  padding:0px 2% 0 5%;
  margin:0px;
}

li {
  list-style:none;
  margin-left:0;
  text-align: left;
  font-weight:200;
  /*transition: font-size 200, font-weight 200, height 200, margin 200, line-height 200, letter-spacing 200;*/
}

li.active {
  color: #af111c;
}

li.active, li.next {
  /*letter-spacing: -7px;*/
  /*font-size: 100px;*/
  font-weight:bold;
  margin:0.2em 0 0.3em 0;
}

body {
  font-size:16px;
}

li {
  font-size:2em;
  line-height: 1.3em;
}
li.active, li.next {
  font-size:6em;
  line-height:1em;
}

.actions{
  font-size:3em;
  
}

.actions div {
  padding:1em;
}
.actions div.start, .actions div.stop {
}

.actions div.mute, .actions div.unMute {
  
}
 
/* Portrait tablet to landscape and desktop */
@media (max-width: 979px) {
  body{
    font-size: 12px;
  }
  .drills {
    padding-left:1em;
  }
}
 
/* Landscape phone to portrait tablet */
@media (max-width: 767px) {
  body{
    font-size: 12px;
  }
  .actions {
    height:2.5em;
    clear:both;
  }
  .actions div {
    float:left;
  }
}
 
/* Landscape phones and down */
@media (max-width: 480px) {
  body{
    font-size: 10px;
  }
}

li.active span.part, li.next span.part {
  display:none;
}

li span.part {
  letter-spacing:0;
  background-color: #DDD;
  display:inline-block;
  display:none;
  vertical-align: middle;
  font-size:11px;
  /*color:#999;*/
}

.counter {
  position:absolute;
  right:-20px;
  top:-80px;
  margin:0;
  padding:0;
  z-index:1;
  font-family: 'Roboto Slab', serif;
  font-weight: 700;
  color:#F4F4F4;
  font-size:400px;
  line-height:400px;
}

.credits {
  z-index:3;
  position:fixed;
  font-size:14px;
  right:0;
  bottom:0;
  color: #DDD;
  padding:1.5em;
  max-width:200px;
  background-color:rgba(255,255,255,0.9);
}

.credits h3{
  font-weight:100;
  padding:0;
  margin:0;
  cursor: pointer;
}

.credits a {
  transition: color 200;
  color: #CCC;
}

.credits p {
  display:none;
}

.credits a:hover{
  color: #888;
  text-decoration: none;
}

